Fix #4 Migration from 1.8 to opendjk 11:
- [x] [deprecation] Integer(integer) in Integer has been deprecated
- [x] [deprecation] Double(double) in Double has been deprecated
- [x] [deprecation] Long(long) in Long has been deprecated
- [x] [deprecation] Float(float) in Float has been deprecated
- [x] [dep-ann] deprecated item is not annotated with `@Deprecated`
- [x] deprecation] newInstance() in Class has been deprecated
- [x] [deprecation] Assert in junit.framework has been deprecated
- [x] error: tag not supported in HTML5: tt
- [x] turning off doclint in JDK 8+ Javadoc