@@ -57,11 +57,11 @@ import org.apache.commons.lang.StringUtils;
 /**
  * Provides the Click application HttpServlet.
  * <p/>
- * Generally developers will simply configure the <tt>ClickServlet</tt> and
+ * Generally developers will simply configure the <code>ClickServlet</code> and
  * will not use it directly in their code. For a Click web application to
- * function the <tt>ClickServlet</tt> must be configured in the web
- * application's <tt>/WEB-INF/web.xml</tt> file. A simple web application which
- * maps all <tt>*.htm</tt> requests to a ClickServlet is provided below.
+ * function the <code>ClickServlet</code> must be configured in the web
+ * application's <code>/WEB-INF/web.xml</code> file. A simple web application which
+ * maps all <code>*.htm</code> requests to a ClickServlet is provided below.
  *
  * <pre class="codeConfig">
  * &lt;web-app&gt;
@@ -76,8 +76,8 @@ import org.apache.commons.lang.StringUtils;
  *    &lt;/servlet-mapping&gt;
  * &lt;/web-app&gt; </pre>
  *
- * By default the <tt>ClickServlet</tt> will attempt to load an application
- * configuration file using the path: &nbsp; <tt>/WEB-INF/click.xml</tt>
+ * By default the <code>ClickServlet</code> will attempt to load an application
+ * configuration file using the path: &nbsp; <code>/WEB-INF/click.xml</code>
  *
  * <h4>Servlet Mapping</h4>
  * By convention all Click page templates should have a .htm extension, and
@@ -86,13 +86,13 @@ import org.apache.commons.lang.StringUtils;
  * and they will not be processed as Click pages.
  *
  * <h4>Load On Startup</h4>
- * Note you should always set <tt>load-on-startup</tt> element to be 0 so the
+ * Note you should always set <code>load-on-startup</code> element to be 0 so the
  * servlet is initialized when the server is started. This will prevent any
  * delay for the first client which uses the application.
  * <p/>
- * The <tt>ClickServlet</tt> performs as much work as possible at startup to
+ * The <code>ClickServlet</code> performs as much work as possible at startup to
  * improve performance later on. The Click start up and caching strategy is
- * configured with the Click application mode in the "<tt>click.xml</tt>" file.
+ * configured with the Click application mode in the "<code>click.xml</code>" file.
  * See the User Guide for information on how to configure the application mode.
  *
  * <h4>ConfigService</h4>
@@ -108,19 +108,19 @@ public class ClickServlet extends HttpServlet {
     private static final long serialVersionUID = 1L;
 
     /**
-     * The <tt>mock page reference</tt> request attribute: key: &nbsp;
-     * <tt>mock_page_reference</tt>.
+     * The <code>mock page reference</code> request attribute: key: &nbsp;
+     * <code>mock_page_reference</code>.
      * <p/>
      * This attribute stores the each Page instance as a request attribute.
      * <p/>
-     * <b>Note:</b> a page is <tt>only</tt> stored as a request attribute
+     * <b>Note:</b> a page is <code>only</code> stored as a request attribute
      * if the {@link #MOCK_MODE_ENABLED} attribute is set.
      */
     static final String MOCK_PAGE_REFERENCE = "mock_page_reference";
 
     /**
-     * The <tt>mock mode</tt> request attribute: key: &nbsp;
-     * <tt>mock_mode_enabled</tt>.
+     * The <code>mock mode</code> request attribute: key: &nbsp;
+     * <code>mock_mode_enabled</code>.
      * <p/>
      * If this attribute is set (the value does not matter) certain features
      * will be enabled which is needed for running Click in a mock environment.
@@ -129,17 +129,17 @@ public class ClickServlet extends HttpServlet {
 
     /**
      * The click application configuration service classname init parameter name:
-     * &nbsp; "<tt>config-service-class</tt>".
+     * &nbsp; "<code>config-service-class</code>".
      */
     protected final static String CONFIG_SERVICE_CLASS = "config-service-class";
 
     /**
-     * The forwarded request marker attribute: &nbsp; "<tt>click-forward</tt>".
+     * The forwarded request marker attribute: &nbsp; "<code>click-forward</code>".
      */
     protected final static String CLICK_FORWARD = "click-forward";
 
     /**
-     * The Page to forward to request attribute: &nbsp; "<tt>click-page</tt>".
+     * The Page to forward to request attribute: &nbsp; "<code>click-page</code>".
      */
     protected final static String FORWARD_PAGE = "forward-page";
 
@@ -1102,8 +1102,8 @@ public class ClickServlet extends HttpServlet {
     }
 
     /**
-     * Process the given pages controls <tt>onDestroy</tt> methods, reset the pages
-     * navigation state and process the pages <tt>onDestroy</tt> method.
+     * Process the given pages controls <code>onDestroy</code> methods, reset the pages
+     * navigation state and process the pages <code>onDestroy</code> method.
      *
      * @param page the page to process
      * @param startTime the start time to log if greater than 0 and not in
@@ -1207,8 +1207,8 @@ public class ClickServlet extends HttpServlet {
      * <p/>
      * An example auto control registration is provided below. In this example
      * the Table control is automatically added to the model using the name
-     * <tt>"table"</tt>, and the ActionLink controls are added using the names
-     * <tt>"editDetailsLink"</tt> and <tt>"viewDetailsLink"</tt>.
+     * <code>"table"</code>, and the ActionLink controls are added using the names
+     * <code>"editDetailsLink"</code> and <code>"viewDetailsLink"</code>.
      *
      * <pre class="codeJava">
      * <span class="kw">public class</span> OrderDetailsPage <span class="kw">extends</span> Page {
@@ -1309,8 +1309,8 @@ public class ClickServlet extends HttpServlet {
      * fields with the same name which are "primitive" types. These types
      * include string, numbers and booleans.
      * <p/>
-     * Type conversion is performed using the <tt>TypeConverter</tt>
-     * of the <tt>PropertyService</tt>.
+     * Type conversion is performed using the <code>TypeConverter</code>
+     * of the <code>PropertyService</code>.
      *
      * @param page the page whose fields are to be processed
      */
@@ -1360,7 +1360,7 @@ public class ClickServlet extends HttpServlet {
      * <span class="kw">protected</span> Page newPageInstance(String path, Class pageClass,
      *     HttpServletRequest request) <span class="kw">throws</span> Exception {
      *
-     *     <span class="kw">return</span> (Page) pageClass.newInstance();
+     *     <span class="kw">return</span> (Page) pageClass.getDeclaredConstructor().newInstance();
      * } </pre>
      *
      * This method is designed to be overridden by applications providing their
@@ -1368,7 +1368,7 @@ public class ClickServlet extends HttpServlet {
      * <p/>
      * A typical example of this would be with Inversion of Control (IoC)
      * frameworks such as Spring or HiveMind. For example a Spring application
-     * could override this method and use a <tt>ApplicationContext</tt> to instantiate
+     * could override this method and use a <code>ApplicationContext</code> to instantiate
      * new Page objects:
      * <pre class="codeJava">
      * <span class="kw">protected</span> Page newPageInstance(String path, Class pageClass,
@@ -1380,7 +1380,7 @@ public class ClickServlet extends HttpServlet {
      *         Page page = (Page) applicationContext.getBean(beanName);
      *
      *     } <span class="kw">else</span> {
-     *         page = (Page) pageClass.newInstance();
+     *         page = (Page) pageClass.getDeclaredConstructor().newInstance();
      *     }
      *
      *     <span class="kw">return</span> page;
@@ -1395,7 +1395,7 @@ public class ClickServlet extends HttpServlet {
     protected Page newPageInstance(String path, Class<? extends Page> pageClass,
             HttpServletRequest request) throws Exception {
 
-        return pageClass.newInstance();
+        return pageClass.getDeclaredConstructor().newInstance();
     }
 
     /**
@@ -1636,7 +1636,7 @@ public class ClickServlet extends HttpServlet {
     /**
      * Creates and returns a new ErrorPage instance.
      * <p/>
-     * This method creates the custom page as specified in <tt>click.xml</tt>,
+     * This method creates the custom page as specified in <code>click.xml</code>,
      * otherwise the default ErrorPage instance.
      * <p/>
      * Subclasses can override this method to provide custom ErrorPages tailored
@@ -1651,7 +1651,7 @@ public class ClickServlet extends HttpServlet {
      */
     protected ErrorPage createErrorPage(Class<? extends Page> pageClass, Throwable exception) {
         try {
-            return (ErrorPage) configService.getErrorPageClass().newInstance();
+            return (ErrorPage) configService.getErrorPageClass().getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
@@ -1668,7 +1668,7 @@ public class ClickServlet extends HttpServlet {
 
     /**
      * Return a new Page instance for the given path. The path must start with
-     * a <tt>"/"</tt>.
+     * a <code>"/"</code>.
      *
      * @param path the path which maps to a Page class
      * @param request the Page request
@@ -1876,13 +1876,13 @@ public class ClickServlet extends HttpServlet {
 
     /**
      * Provides an Ajax exception handler. Exceptions are wrapped inside a
-     * <tt>div</tt> element and streamed back to the browser. The response status
+     * <code>div</code> element and streamed back to the browser. The response status
      * is set to an {@link javax.servlet.http.HttpServletResponse#SC_INTERNAL_SERVER_ERROR HTTP 500 error}
      * which allows the JavaScript that initiated the Ajax request to handle
      * the error as appropriate.
      * <p/>
-     * If Click is running in <tt>development</tt> modes the exception stackTrace
-     * will be rendered, in <tt>production</tt> modes an error message is
+     * If Click is running in <code>development</code> modes the exception stackTrace
+     * will be rendered, in <code>production</code> modes an error message is
      * rendered.
      * <p/>
      * Below is an example error response:
@@ -1955,13 +1955,13 @@ public class ClickServlet extends HttpServlet {
             serviceClass = ClickUtils.classForName(classname);
         }
 
-        return serviceClass.newInstance();
+        return serviceClass.getDeclaredConstructor().newInstance();
     }
 
     /**
-     * Initialize the Click application <tt>ConfigService</tt> instance and bind
+     * Initialize the Click application <code>ConfigService</code> instance and bind
      * it as a ServletContext attribute using the key
-     * "<tt>org.apache.click.service.ConfigService</tt>".
+     * "<code>org.apache.click.service.ConfigService</code>".
      * <p/>
      * This method will use the configuration service class specified by the
      * {@link #CONFIG_SERVICE_CLASS} parameter, otherwise it will create a
